# Vision-Chess

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  abc.tunerconfig  bits.cpp  bits.h  champ.nnue  eval.cpp  eval.h  hash.cpp  hash.h  log.txt  main.cpp  main.py  man.py  movegen.cpp  movegen.h  nnue.cpp  nnue.h  opt.py  order.cpp  order.h  pos.cpp  pos.h  precomp.h  progresslog.txt  readme.txt  results.csv  search.cpp  search.h  see.cpp  see.h  tests.cpp  timer.cpp  timer.h  tt.cpp  tt.h  tuner.cpp  (+14 more)
scripts/: dataprep.py  man.py  model.py  opt.py  parse.py  prep.py  preplib.py  prepper.py  psfk.kwnnue  serializer.py
src/: CMakeLists.txt  Makefile  accumulator.cpp  accumulator.h  attacks.cpp  attacks.h  bits.cpp  bits.h  distribution.cpp  distribution.h  eval.cpp  eval.h  evaluator.h  hash.cpp  hash.h  history.cpp  history.h  index.js  index.wasm  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  movepicker.cpp  movepicker.h  nnue.cpp  nnue.h  order.cpp  order.h  pos.cpp  pos.h  search.cpp  search.h  tests.cpp  tests.h  thread.cpp  thread.h  timer.cpp  timer.h  (+14 more)
src/archs/: neon.h
src/hce/: hce.cpp  hce.h
src/nnue/: accumulator.cpp  accumulator.h  nnue.cpp  nnue.h
web/: Vision.wasm  index.html  timer.js  web.js  worker.js
